@@ -1,3 +1,15 @@
+2012-09-10  Rick Byers  <rbyers@chromium.org>
+
+        [chromium] Don't use WebGestureEvent.boundingBox for touch adjustment
+        https://bugs.webkit.org/show_bug.cgi?id=95996
+
+        Reviewed by Adam Barth.
+
+        Switch from WebGestureEvent.boundingBox to new gesture-type specific
+        data fields.
+        * src/WebViewImpl.cpp:
+        (WebKit::WebViewImpl::handleGestureEvent):
+
 2012-09-09  Keishi Hattori  <keishi@webkit.org>
 
         REGRESSION(r127558): Fix a crash in DateTimeChooserImpl::didClosePopup
